@@ -22,6 +22,7 @@ Version 0.4c
  - CrushingStrike replaced
  - SetTrap replaced, more powerful
  - Provoke and Taunt replaced
+ - EnemySkills replaced: Scorpion, Orchid
 
 --------------------------------------------
              PREVIOUS VERSIONS
